# VirtualShelf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.py  dbfile.db  main.cpp
.github/: build_sqlite3.py  builder.py  release-template.md  rename.py
.github/workflows/: build.yml  cd.yml  ci.yml  release.yml  test.yml
VSinclude/: Books.h  Options.h  Utils.h  books.h  libtui.h  options.h
include/: books.h  database.h  libtui.h  options.h  shared.h  students.h  utils.h
libtui/: go.mod  libtui.go
libtui/tui/: bp.go  logo.go  menu.go  shared.go  utils.go
src/: Books.cpp  Options.cpp  Utils.cpp  books.cpp  database.cpp  options.cpp  shared.cpp  students.cpp  utils.cpp
tests/: add_book_test.cpp  add_student_test.cpp  borrowing_rules_test.cpp  main.cpp  test_rgb_toggle.cpp  test_setup_db.cpp
